# git-c

./: README.md  UserSer.txt  code1.py  main.py  real_estate_bot.py
chatbot/: demo.py
eamil_ code/: main.py  pyproject.toml  requirements.txt  token.json
eamil_ code/src/: graph.py  state.py
eamil_ code/src/email_auto_responder_flow/crews/email_filter_crew/: email_filter_crew.py
eamil_ code/src/email_auto_responder_flow/templates/: proposals_template.docx
eamil_ code/src/email_auto_responder_flow/tools/: create_draft.py
eamil_ code/src/email_auto_responder_flow/utils/: emails.py
email_mail/: main.py
email_mail/config/: agents.yaml  tasks.yaml
email_mail/tools/: ExaSearchTool.py  custom_tool.py
email_test/: crewai_runner.py  email_crew.py  google_calendar_agent.py  main.py
email_test/config/: agents.yaml  tasks.yaml
email_test/credentials/: credentials.json
latest_ai_development1/: crew.py  main.py
my_crew/: crew.py  main.py
my_crew/config/: agents.yaml  tasks.yaml
real_estate/: crew.py  main.py
real_estate/config/: tasks.yaml
